--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.4.21"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
+    implementation 'com.beust:klaxon:5.5'
 }
