--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,26 @@ buildscript {
     ext.kotlin_version = "1.4.21"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.android.tools.build:gradle:7.1.0"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+//        classpath 'org.jetbrains.kotlin.jvm:1.7.21'
+//        classpath 'org.jetbrains.kotlin.plugin.serialization:1.7.21'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
+}
+
 allprojects {
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
